# NikonTiCtrl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  api.proto  api_server.cpp  api_server.h  cmap_data.cpp  config.cpp  config.h  datamanager.cpp  datamanager.h  devicecontrol.cpp  devicecontrol.h  gl_image_viewer_mono.frag  glimageviewer.cpp  glimageviewer.h  image.cpp  image.h  logger.cpp  logger.h  logging.cpp  logging.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  propertystatus.h  taskcontrol.cpp  taskcontrol.h  vcpkg.json
config/: config.json  user.json
device/: hamamatsu_dcam.cpp  hamamatsu_dcam.h  micromanager_camera.cpp  micromanager_camera.h  nikon_ti.cpp  nikon_ti_property.cpp  prior_proscan.cpp  prior_proscan.h  prior_proscan_property.cpp  prior_proscan_property.h  trigger_controller.cpp
examples/: test.ipynb
python/: api.py  api_pb2.py  api_pb2_grpc.py
python/nikon_ti_ctrl/: __init__.py  api.py  api_pb2.py  api_pb2_grpc.py  data.py  sample.py  tasks.py
src/: api_server.cpp  api_server.h  channel.cpp  channel.h  config.cpp  config.h  datamanager.h  devicecontrol.cpp  devicecontrol.h  eventstream.cpp  eventstream.h  experimentcontrol.cpp  experimentcontrol.h  experimentdb.cpp  experimentdb.h  image.cpp  image.h  imagingcontrol.cpp  imagingcontrol.h  logger.cpp  logger.h  logging.cpp  logging.h  main.cpp  mainwindow.h  propertystatus.cpp  taskcontrol.cpp  taskcontrol.h  version.cpp.in  version.h
src/analysis/: analysismanager.cpp  analysismanager.h  segmentation.cpp  segmentation.h  utils.cpp  utils.h
src/api/: api.proto  api_server.cpp  api_server.h
src/data/: datamanager.cpp  datamanager.h  imagedata.cpp  imagedata.h  imageio.cpp  imageio.h  imageutils.cpp  imageutils.h  ndimage.cpp  ndimage.h
src/device/: device.cpp  device.h  devicehub.cpp  devicehub.h  mm_api.cpp  mm_api.h  nikon_ti.cpp  nikon_ti.h  nikon_ti_property.h  prior_proscan.cpp  prior_proscan.h  propertypath.cpp  propertypath.h  trigger_controller.h
src/device/flir/: flir_spinnaker.cpp  flir_spinnaker.h
src/device/hamamatsu/: hamamatsu_dcam.cpp  hamamatsu_dcam.h
src/device/nikon/: mm_api.cpp  mm_api.h  nikon_ti.cpp  nikon_ti.h  nikon_ti_prop_info.cpp  nikon_ti_prop_info.h
src/device/prior/: prior_proscan.cpp  prior_proscan.h  prior_proscan_prop_info.cpp  prior_proscan_prop_info.h
src/image/: imagedata.cpp  imagedata.h  imageio.cpp  imageio.h  imagemanager.cpp  imagemanager.h  imageutils.cpp  imageutils.h  ndimage.cpp  ndimage.h
src/qt/: acquirepage.cpp  acquirepage.h  acquisitioncontrol_view.cpp  acquisitioncontrol_view.h  channelcontrol_model.cpp  channelcontrol_model.h  datamanager_model.cpp  datamanager_model.h  datamanager_view.cpp  datamanager_view.h  datapage.cpp  datapage.h  devicecontrol_model.cpp  devicecontrol_model.h  devicecontrol_view.cpp  devicecontrol_view.h  experimentcontrol_model.cpp  experimentcontrol_model.h  glimageview.cpp  glimageview.h  glimageview.qrc  glimageview.vert  glimageview_mono.frag  glimageviewer.cpp  imagehistview.cpp  imagehistview.h  imagemanager_model.cpp  imagemanager_model.h  imagemanager_view.cpp  imagemanager_view.h  imagingcontrol_model.cpp  imagingcontrol_model.h  imagingcontrol_view.cpp  imagingcontrol_view.h  mainwindow.cpp  mainwindow.h  ndimage_view.cpp  ndimage_view.h  ndimageview.cpp  ndimageview.h  (+7 more)
src/qt/cmap/: cmap_data.cpp
src/qt/widgets/: platesamplewidget.cpp  platesamplewidget.h
src/sample/: sample.cpp  sample.h  samplemanager.cpp  samplemanager.h
src/task/: channelcontrol.cpp  channelcontrol.h  live_view_task.cpp  live_view_task.h  multi_channel_task.cpp  multi_channel_task.h
src/utils/: devnotify.cpp  devnotify.h  hdf5file.cpp  hdf5file.h  structarray.cpp  structarray.h  tiff_stream.cpp  tiff_stream.h  tifffile.cpp  tifffile.h  time_utils.cpp  time_utils.h  uuid.cpp  uuid.h  wmi.cpp  wmi.h  zipfile.cpp  zipfile.h  zipfile_internal.h
tensorflow_server/: .gitignore  docker-compose.yml
utils/: devnotify.cpp  devnotify.h  string_utils.cpp  string_utils.h  time_utils.cpp  time_utils.h  wmi.cpp  wmi.h
